Árak tisztítása: "$" és "," eltávolítása, majd float típussá alakítás

--- a/peter_belavari_3_hazi.ipynb
+++ b/peter_belavari_3_hazi.ipynb
@@ -375,7 +375,10 @@
         "import numpy as np\n",
         "\n",
         "# Adat betöltése\n",
-        "df = pd.read_csv('laptop_prices.csv')"
+        "df = pd.read_csv('laptop_prices.csv')\n",
+        "\n",
+        "# Árak tisztítása: \"$\" és \",\" eltávolítása, majd float típussá alakítás\n",
+        "df['price'] = df['price'].replace('[\\$,]', '', regex=True).astype(float)\n"
       ],
       "metadata": {
         "id": "JihQVSgR7Rp7"
